--- a/Gym_Membership/MainWindow.xaml
+++ b/Gym_Membership/MainWindow.xaml
@@ -5,11 +5,42 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gym_Membership"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="350">
     <Grid>
-        <TextBox x:Name="password" HorizontalAlignment="Center" Margin="0,318,0,0" TextWrapping="Wrap" Text="Password" VerticalAlignment="Top" Width="120" GotFocus="password_GotFocus" LostFocus="password_LostFocus" KeyUp="password_KeyUp"/>
-        <Button x:Name="loginButton" Content="Login" HorizontalAlignment="Center" Margin="0,385,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.038,0.38" Click="loginButton_Click"/>
-        <TextBox x:Name="username" HorizontalAlignment="Center" Margin="0,279,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" Width="120" GotFocus="username_GotFocus" LostFocus="username_LostFocus" KeyUp="username_KeyUp"/>
+        <Grid.Background>
+            <ImageBrush ImageSource="C:\Users\Ram\Downloads\Action Arm Dumbbell Background Wallpaper Image For Free Download - Pngtree.jpg" />
+        </Grid.Background>
+
+        <TextBox x:Name="password" HorizontalAlignment="Center" Margin="0,318,0,0" TextWrapping="Wrap" Text="Password" VerticalAlignment="Top" Width="120" GotFocus="password_GotFocus" LostFocus="password_LostFocus" KeyUp="password_KeyUp" FontFamily="Elephant">
+            <TextBox.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </TextBox.Background>
+        </TextBox>
+        <Button x:Name="loginButton" Content="Login" HorizontalAlignment="Center" Margin="0,385,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.038,0.38" Click="loginButton_Click" FontFamily="Elephant">
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+            <Button.Effect>
+                <DropShadowEffect/>
+            </Button.Effect>
+        </Button>
+        <TextBox x:Name="username" HorizontalAlignment="Center" Margin="0,279,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top" Width="120" GotFocus="username_GotFocus" LostFocus="username_LostFocus" KeyUp="username_KeyUp" FontFamily="Elephant">
+            <TextBox.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </TextBox.Background>
+            <TextBox.Effect>
+                <DropShadowEffect/>
+            </TextBox.Effect>
+        </TextBox>
 
     </Grid>
 </Window>
